vbnc/vbnc/tests/Errors/31087.vb
Module Test

	Sub Foo()
	  
		Dim a() As String()
		
	End Sub
	
End Module
